infra/k8s/auth-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drive-auth-deployment
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: ashinjoy/auth-srv
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3002
---
apiVersion: v1   
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
  - name: auth
    port: 3002
    targetPort: 3002
