infra/k8s/drive-client.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drive-client-deployment
spec:
  selector:
    matchLabels:
      app: drive-client
  template:
    metadata:
      labels:
        app: drive-client
    spec:
      containers:
      - name: drive-client
        image: ashinjoy/drive-client
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
---
apiVersion: v1   
kind: Service
metadata:
  name: drive-client-service
spec:
  selector:
    app: drive-client
  ports:
  - name: drive-client
    port: 3000
    targetPort: 3000
