infra/k8s/kafka.yaml

# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: kafka
#   namespace: kafka
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: kafka
#   name: kafka-headless
#   namespace: kafka
# spec:
#   clusterIP: None
#   clusterIPs:
#   - None
#   internalTrafficPolicy: Cluster
#   ipFamilies:
#   - IPv4
#   ipFamilyPolicy: SingleStack
#   ports:
#   - name: tcp-kafka-int
#     port: 9092
#     protocol: TCP
#     targetPort: tcp-kafka-int
#   - name: tcp-kafka-ctrl
#     port: 29093
#     protocol: TCP
#     targetPort: tcp-kafka-ctrl
#   selector:
#     app: kafka
#   sessionAffinity: None
#   type: ClusterIP
# ---
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   labels:
#     app: kafka
#   name: kafka
#   namespace: kafka
# spec:
#   podManagementPolicy: Parallel
#   replicas: 3
#   revisionHistoryLimit: 10
#   selector:
#     matchLabels:
#       app: kafka
#   serviceName: kafka-headless
#   template:
#     metadata:
#       labels:
#         app: kafka
#     spec:
#       serviceAccountName: kafka
#       containers:
#       - command:
#         - sh
#         - -exc
#         - |
#           export CLUSTER_ID="6PMpHYL9QkeyXRj9Nrp4KA" && \
#           export KAFKA_NODE_ID=${HOSTNAME##*-} 
#           export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${POD_NAME}.kafka-headless.kafka.svc.cluster.local:9092
#           export KAFKA_CONTROLLER_QUORUM_VOTERS="0@kafka-0.kafka-headless.kafka.svc.cluster.local:29093,1@kafka-1.kafka-headless.kafka.svc.cluster.local:29093,2@kafka-2.kafka-headless.kafka.svc.cluster.local:29093" 

#           exec /etc/confluent/docker/run
#         env:
#         - name: KAFKA_CONTROLLER_LISTENER_NAMES
#           value: "CONTROLLER"
#         - name: KAFKA_LISTENERS
#           value: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:29093
#         - name: POD_NAME
#           valueFrom:
#             fieldRef:
#               apiVersion: v1
#               fieldPath: metadata.name
#         name: kafka
#         image: docker.io/confluentinc/confluent-local:7.5.0
#         imagePullPolicy: IfNotPresent
#         ports:
#         - containerPort: 9092
#           name: tcp-kafka-int
#           protocol: TCP
#         - containerPort: 29093
#           name: tcp-kafka-ctrl
#           protocol: TCP
#         resources:
#           limits:
#             cpu: "1"
#             memory: 1400Mi
#           requests:
#             cpu: 250m
#             memory: 512Mi
#         securityContext:
#           allowPrivilegeEscalation: false
#           capabilities:
#             drop:
#             - ALL
#           # readOnlyRootFilesystem: true
#           runAsGroup: 1000
#           runAsUser: 1000
#         terminationMessagePath: /dev/termination-log
#         terminationMessagePolicy: File
#         volumeMounts:
#         - mountPath: /etc/kafka
#           name: config
#       dnsPolicy: ClusterFirst
#       restartPolicy: Always
#       schedulerName: default-scheduler
#       securityContext:
#         fsGroup: 1000
#       terminationGracePeriodSeconds: 30
#       volumes:
#       - emptyDir: {}
#         name: config
#   updateStrategy:
#     type: RollingUpdate

apiVersion: v1
kind: Service
metadata: 
  name: kafka-service
  labels: 
   app: kafka-app 
  namespace: kafka 
spec:
  selector:
    app: kafka
  clusterIP: None
  ports: 
    - name: kafka-port
      port: 9092
      protocol: TCP
      targetPort: 9092
---
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: kafka
  namespace: kafka
spec:
  serviceName: kafka-service 
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
      # namespace: kafka  
    spec:
      containers:
        - name: kafka
          image: doughgle/kafka-kraft
          ports:
            - containerPort: 9092
            - containerPort: 9093
          volumeMounts:
            - name: data
              mountPath: /mnt/kafka
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"    
        resources:
          requests:
            storage: "1Gi"  

 
# apiVersion: v1
# kind: Service
# metadata:
#   name: kafka-svc
#   # labels:
#   #   app: kafka-app
# spec:
#   clusterIP: None
#   ports:
#     - name: '9092'
#       port: 9092
#       protocol: TCP
#       targetPort: 9092
#   selector:
#     app: kafka-app
# ---
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: kafka
#   # labels:
#   #   app: kafka-app
# spec:
#   serviceName: kafka-svc
#   replicas: 3
#   selector:
#     matchLabels:
#       app: kafka-app
#   template:
#     metadata:
#       labels:
#         app: kafka-app
#     spec:
#       containers:
#         - name: kafka-container
#           image: doughgle/kafka-kraft
#           ports:
#             - containerPort: 9092
#             - containerPort: 9093
#           env:
#             - name: REPLICAS
#               value: '3'
#             - name: SERVICE
#               value: kafka-svc
#             - name: NAMESPACE
#               value: default
#             - name: SHARE_DIR
#               value: /mnt/kafka
#             - name: CLUSTER_ID
#               value: oh-sxaDRTcyAr6pFRbXyzA
#             - name: DEFAULT_REPLICATION_FACTOR
#               value: '3'
#             - name: DEFAULT_MIN_INSYNC_REPLICAS
#               value: '2'
#           volumeMounts:
#             - name: data
#               mountPath: /mnt/kafka
#   volumeClaimTemplates:
#     - metadata:
#         name: data
#       spec:
#         accessModes:
#           - "ReadWriteOnce"
#         resources:
#           requests:
#             storage: "1Gi"
