infra/k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: drive-payment-deployment
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: ashinjoy/payment-srv
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service    
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
  - name: payment
    port: 3005
    targetPort: 3005
