infra/k8s/trip-service.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: drive-trip-deployment
spec:
  selector:
    matchLabels:
      app: trip
  template:
    metadata:
      labels:
        app: trip
    spec:
      containers:
        - name: trip
          image: ashinjoy/trip-srv
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service    
metadata:
  name: trip-service
spec:
  selector:
    app: trip
  ports:
  - name: trip
    port: 3003
    targetPort: 3003
